Use Generational ZGC - Bump lombok to new version 1.18.34